# jau2

./: .gitignore  Dockerfile  app.py  doc_parser.py  docker-compose.yml  gunicorn_config.py  page.jsx  prd.json  pyproject.toml  render.yaml  requirements.txt
backend/: app.py  auth.py  train_models.py
backend/data/: ML_Dataset_5000_FINAL_dirty(1).csv  ML_Feature_Set_Cleaned.csv  skills_dataset.csv
backend/engines/: benchmarking_engine.py  doc_parser.py  insight_engine.py  internship_engine.py  placement_predictor.py  quality_evaluator.py  readiness_scorer.py  resources.json  roadmap_generator.py  skill_gap_engine.py
backend/models/: aptitude_model.pkl  database.py  feature_importance.json  placement_model.pkl
backend/tests/: test_engines.py
frontend/: package.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/analyze/: page.jsx
frontend/src/app/auth/: page.jsx
frontend/src/app/results/: page.jsx
frontend/src/components/: Navbar.jsx
legacy/: app.py  backend_test.py  dashboard.html  data_cleaning.py  data_training(1).py  index.html  placement_probability.py  recommendation_engine.py  result.html  skill_gap_engine.py  test_engine.py  train_phase1_models.py
